update/btn borrar panel de operaciones, local storage y navbar btn haburgesa

--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">    
         <!-- ID -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js" integrity="sha512-Bcog7KQsuePA92aZHcQfeAp3w4BiUKHgihhKJLsSVVU67s7KspPbywP7nTMZtJ8YOn//vLCeWvYnb00KryziDA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js" integrity="sha512-Bcog7KQsuePA92aZHcQfeAp3w4BiUKHgihhKJLsSVVU67s7KspPbywP7nTMZtJ8YOn//vLCeWvYnb00KryziDA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- css -->
     <link rel="stylesheet" href="style.css">
     <title>AhorraADAs</title>
 </head>
 
 <body>
+
+    
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
         <div class="container-fluid nav-container p-3">
             <a class="navbar-brand nav-title text-white" href="#">
                 <i class="fa-solid fa-wallet"></i>
                 AhorrADAs</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            <button class="navbar-toggler collapsed navbar-brand" id="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse nav-flex" id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
                     <a id="balance" class="nav-link my-nav-link" aria-current="page" href="#"><i
                             class="fa-solid fa-chart-line"></i> Balance</a>
@@ -43,7 +46,6 @@
             </div>
         </div>
     </nav>
-
     <div id="primera-pagina">
         <main class="container d-flex flex-wrap bd-highlight my-4">
 
