--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="mb-3">
                                 <label for="select-filtro-categoria" class="form-label">Categoría</label>
                                 <select type="select" class="form-select categorias-select filtro-categoria"
-                                    id="filtro-categoria" aria-describedby="">
+                                    id="filtro-categoria" aria-describedby="Categoria">
 
                                 </select>
                             </div>
@@ -224,7 +224,7 @@
                     <label for="nombre" class="form-label">Nombre</label>
                 </div>
                 <div class="d-flex flex-row">
-                    <input type="text" class="form-control" id="btn-agregar">
+                    <input type="text" class="form-control" id="input-nombre">
                     <button type="button" class="btn btn-success mx-3" id="btn-agregar">Agregar</button>
                 </div>
                 <br>
