--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
                     <div class="mb-3">
                         <label for="fecha-inpu" class="form-label">Fecha</label>
-                        <input type="date" value="" class="form-control fecha-input" id="fecha-input"
+                        <input type="date" class="form-control fecha-input" id="fecha-input"
                             aria-describedby="fecha">
                     </div>
 
@@ -213,6 +213,52 @@
             </div>
         </div>
     </div>
+        <!-- ********************************
+           - EDITAR OPERACION
+******************************** -->
+<div class="container oculto my-5" id="container-editar-operacion">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+
+            <form class="shadow p-3 mb-5 bg-body rounded card-style" name="myform" novalidate>
+                <h2 class="mb-5 mt-2">Editar operación</h2>
+                <div class="mb-3">
+                    <label for="descripcion-input" class="form-label">Descripción</label>
+                    <input type="text" class="form-control" id="panel-editar-descripcion-input"
+                        aria-describedby="descripcion de operacion" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="monto" class="form-label">Monto</label>
+                    <input type="number" value="0" class="form-control" id="panel-editar-monto-input" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="tipo" class="form-label">Tipo</label>
+                    <select class="form-select select-monto" aria-label="Tipo" id="panel-editar-tipo-operacion">
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="categoria" class="form-label">Categorías</label>
+                    <select class="form-select categorias-select" id="panel-editar-categoria-select" aria-label="Categoria">
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label for="fecha-inpu" class="form-label">Fecha</label>
+                    <input type="date" value="" class="form-control fecha-input" id="panel-editar-fecha-input"
+                        aria-describedby="fecha">
+                </div>
+
+                <div class="d-flex justify-content-end mt-5">
+                    <button type="submit" class="btn btn-light mx-2" id="panel-editar-btn-cancelar">Cancelar</button>
+                    <button type="submit" class="btn btn-success" id="panel-editar-agregar-operacion-btn">Agregar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
     <!-- ********************************
             CATEGORIAS
 ******************************** -->
