--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="categoria" class="form-label">Categorías</label>
+                        <label for="categoria-select" class="form-label">Categorías</label>
                         <select class="form-select categorias-select" id="categoria-select" aria-label="Categoria">
                         </select>
                     </div>
 
                     <div class="mb-3">
-                        <label for="fecha-inpu" class="form-label">Fecha</label>
+                        <label for="fecha-input" class="form-label">Fecha</label>
                         <input type="date" value="" class="form-control fecha-input" id="fecha-input"
                             aria-describedby="fecha">
                     </div>
@@ -221,14 +221,18 @@
             <form class="col-md-8 shadow p-3 mb-5 bg-body rounded">
                 <h2 class="mb-5 mt-2">Categorías</h2>
                 <div>
-                    <label for="nombre" class="form-label">Nombre</label>
+                    <label for="input-nombre" class="form-label">Nombre</label>
                 </div>
                 <div class="d-flex flex-row">
                     <input type="text" class="form-control" id="input-nombre">
-                    <button type="button" class="btn btn-success mx-3" id="btn-agregar">Agregar</button>
+                    <button type="button" class="btn btn-success mx-3" id="btn-agregar-cat">Agregar</button>
                 </div>
-                <br>
                 <div class="d-flex bd-highlight mb-3">
+                    <div id="nueva-cat"></div>
+
+                </div>
+                 <!---<br>
+               <div class="d-flex bd-highlight mb-3">
                     <div class="me-auto p-2 bd-highligh btn-titulo-categorias">Comida</div>
                     <button type="button"
                         class="p-2 bd-highlight btn btn-link btn-cat-comida-editar text-decoration-none"
@@ -284,7 +288,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div>--->
     <!-- ********************************
             REPORTES
     ******************************** -->
