--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -100,7 +100,7 @@
                             <div class="mb-3">
                                 <label for="select-filtro-categoria" class="form-label">Categoría</label>
                                 <select type="select" class="form-select categorias-select filtro-categoria"
-                                    id="filtro-categoria" aria-describedby="Categoria">
+                                    id="filtro-categoria" aria-describedby="">
 
                                 </select>
                             </div>
@@ -194,7 +194,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="categoria-select" class="form-label">Categorías</label>
+                        <label for="categoria" class="form-label">Categorías</label>
                         <select class="form-select categorias-select" id="categoria-select" aria-label="Categoria">
                         </select>
                     </div>
@@ -267,18 +267,14 @@
             <form class="col-md-8 shadow p-3 mb-5 bg-body rounded">
                 <h2 class="mb-5 mt-2">Categorías</h2>
                 <div>
-                    <label for="input-nombre" class="form-label">Nombre</label>
+                    <label for="nombre" class="form-label">Nombre</label>
                 </div>
                 <div class="d-flex flex-row">
-                    <input type="text" class="form-control" id="input-nombre">
-                    <button type="button" class="btn btn-success mx-3" id="btn-agregar-cat">Agregar</button>
+                    <input type="text" class="form-control" id="btn-agregar">
+                    <button type="button" class="btn btn-success mx-3" id="btn-agregar">Agregar</button>
                 </div>
+                <br>
                 <div class="d-flex bd-highlight mb-3">
-                    <div id="nueva-cat"></div>
-
-                </div>
-                 <!---<br>
-               <div class="d-flex bd-highlight mb-3">
                     <div class="me-auto p-2 bd-highligh btn-titulo-categorias">Comida</div>
                     <button type="button"
                         class="p-2 bd-highlight btn btn-link btn-cat-comida-editar text-decoration-none"
@@ -333,7 +329,7 @@
                         id="btn-cat-trabajo-eliminar">Eliminar</button>
                 </div>
             </form>
-        </div>--->
+        </div>
     </div>
     <!-- ********************************
             REPORTES
