--- a/index.html
+++ b/index.html
@@ -59,18 +59,6 @@
                 <div class="card col shadow p-3 mb-5 bg-body rounded card-style">
                     <h5 class="card-title">Balance</h5>
                     <div id="balance-id">
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Ganancias</p>
-                            <div class="text-success">+$0</div>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Gastos</p>
-                            <div class="text-danger">-$0</div>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p class="card-text">Total</p>
-                            <div class="fw-bold">$0</div>
-                        </div>
                     </div>
                 </div>
                 <!-- ********************************
@@ -122,10 +110,8 @@
             <!-- ********************************
             OPERACIONES
 ******************************** -->
-
             <div class="my-card-body col m-2" style="width: 10rem;" id="card-operaciones">
                 <div class="card card-operaciones shadow p-3 mb-5 bg-body rounded card-style container-operaciones-uno">
-
                     <div class="d-flex justify-content-between">
                         <h2 class="card-title">Operaciones</h2>
                         <button type="button" id="btn-nueva-operacion"
@@ -154,12 +140,8 @@
                                     <th scope="col">Acciones</th>
                                 </tr>
                             </thead>
-
                             <tbody class="tabla-operaciones" id="tabla-operaciones"></tbody>
-
-
                         </table>
-
                     </div>
                 </div>
             </div>
@@ -201,8 +183,7 @@
 
                     <div class="mb-3">
                         <label for="fecha-inpu" class="form-label">Fecha</label>
-                        <input type="date" class="form-control fecha-input" id="fecha-input"
-                            aria-describedby="fecha">
+                        <input type="date" class="form-control fecha-input" id="fecha-input" aria-describedby="fecha">
                     </div>
 
                     <div class="d-flex justify-content-end mt-5">
@@ -213,52 +194,55 @@
             </div>
         </div>
     </div>
-        <!-- ********************************
+    <!-- ********************************
            - EDITAR OPERACION
 ******************************** -->
-<div class="container oculto my-5" id="container-editar-operacion">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
+    <div class="container oculto my-5" id="container-editar-operacion">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
 
-            <form class="shadow p-3 mb-5 bg-body rounded card-style" name="myform" novalidate>
-                <h2 class="mb-5 mt-2">Editar operación</h2>
-                <div class="mb-3">
-                    <label for="descripcion-input" class="form-label">Descripción</label>
-                    <input type="text" class="form-control" id="panel-editar-descripcion-input"
-                        aria-describedby="descripcion de operacion" required>
-                </div>
+                <form class="shadow p-3 mb-5 bg-body rounded card-style" name="myform" novalidate>
+                    <h2 class="mb-5 mt-2">Editar operación</h2>
+                    <div class="mb-3">
+                        <label for="descripcion-input" class="form-label">Descripción</label>
+                        <input type="text" class="form-control" id="panel-editar-descripcion-input"
+                            aria-describedby="descripcion de operacion" required>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="monto" class="form-label">Monto</label>
-                    <input type="number" value="0" class="form-control" id="panel-editar-monto-input" required>
-                </div>
+                    <div class="mb-3">
+                        <label for="monto" class="form-label">Monto</label>
+                        <input type="number" value="0" class="form-control" id="panel-editar-monto-input" required>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="tipo" class="form-label">Tipo</label>
-                    <select class="form-select select-monto" aria-label="Tipo" id="panel-editar-tipo-operacion">
-                    </select>
-                </div>
+                    <div class="mb-3">
+                        <label for="tipo" class="form-label">Tipo</label>
+                        <select class="form-select select-monto" aria-label="Tipo" id="panel-editar-tipo-operacion">
+                        </select>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="categoria" class="form-label">Categorías</label>
-                    <select class="form-select categorias-select" id="panel-editar-categoria-select" aria-label="Categoria">
-                    </select>
-                </div>
+                    <div class="mb-3">
+                        <label for="categoria" class="form-label">Categorías</label>
+                        <select class="form-select categorias-select" id="panel-editar-categoria-select"
+                            aria-label="Categoria">
+                        </select>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="fecha-inpu" class="form-label">Fecha</label>
-                    <input type="date" value="" class="form-control fecha-input" id="panel-editar-fecha-input"
-                        aria-describedby="fecha">
-                </div>
+                    <div class="mb-3">
+                        <label for="fecha-inpu" class="form-label">Fecha</label>
+                        <input type="date" value="" class="form-control fecha-input" id="panel-editar-fecha-input"
+                            aria-describedby="fecha">
+                    </div>
 
-                <div class="d-flex justify-content-end mt-5">
-                    <button type="submit" class="btn btn-light mx-2" id="panel-editar-btn-cancelar">Cancelar</button>
-                    <button type="submit" class="btn btn-success" id="panel-editar-agregar-operacion-btn">Agregar</button>
-                </div>
-            </form>
+                    <div class="d-flex justify-content-end mt-5">
+                        <button type="submit" class="btn btn-light mx-2"
+                            id="panel-editar-btn-cancelar">Cancelar</button>
+                        <button type="submit" class="btn btn-success"
+                            id="panel-editar-agregar-operacion-btn">Agregar</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
     <!-- ********************************
             CATEGORIAS
 ******************************** -->
