update/panel de reporte funcion total por mes

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </div>
                     <div class="d-flex justify-content-center flex-column mx-4">
                         <h4>Totales por mes</h4>
-                        <table class="table table-borderless table-success">
+                        <table class="table table-borderless">
                             <thead>
                                 <tr class="table-success">
                                     <th scope="col">Mes</th>
@@ -345,7 +345,8 @@
                                     <th scope="col">Balance</th>
                                 </tr>
                             </thead>
-                            <tbody></tbody>
+                            
+                            <tbody id="reporte-por-mes"></tbody>
                         </table>
                     </div>
                 </div>
