update/panel categoria se agrega nueva categoria y se pinta tambien en los selects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>AhorraADAs</title>
+    <title>AhorrADAs</title>
 </head>
 
 <body>
