--- a/index.html
+++ b/index.html
@@ -268,6 +268,24 @@
             </form>
         </div>
     </div>
+       <!-- ********************************
+           EDITAR CATEGORIA
+******************************** -->
+<div class="container d-none my-5" id="container-categorias-editar">
+    <div class="row justify-content-center">
+        <form class="col-md-8 shadow p-3 mb-5 bg-body rounded" style="--bs-bg-opacity: .7;">
+            <h2 class="mb-3 mt-2">Editar Categoría</h2>
+            <div><h6>Nombre</h6></div>
+            <div class="d-flex flex-row">
+                <input type="text" class="form-control" id="input-agregar-categoria-editada">
+                <label for="input-agregar-categoria-editada"></label>
+                <button type="submit" class="btn btn-outline-secondary btn-operaciones mx-3 active" id="btn-cancelar-categoria-editar">Cancelar</button>
+                <button type="submit" class="btn btn-outline-secondary btn-operaciones mx-3 active" id="btn-agregar-categoria-editar">Agregar</button>
+
+            </div>
+        </form>
+    </div>
+</div>
     <!-- ********************************
             REPORTES
     ******************************** -->
