update/panel categoria edita categoria, falta mejorar que lo pinte en select y agregue funciones reporte mayor ganancia y gasto por mes

--- a/index.html
+++ b/index.html
@@ -328,13 +328,13 @@
                         </div>
                         <div class="row justify-content-start text-start my-3">
                             <div class="col-6">Mes con mayor ganancia</div>
-                            <div class="col-3 text-end">m</div>
-                            <div class="col-3 text-end">m</div>
+                            <div class="col-3 text-center " id="id-mes-mayor-ganancia"></div>
+                            <div class="col-3 text-end text-success" id="id-mes-manto-ganacia"></div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
                             <div class="col-6">Mes con mayor gasto</div>
-                            <div class="col-3 text-end">m</div>
-                            <div class="col-3 text-end">m</div>
+                            <div class="col-3 text-center " id="id-mes-mayor-gasto"></div>
+                            <div class="col-3 text-end text-danger" id="id-mes-manto-gasto"></div>
                         </div>
                     </div>
 
