update/los filtros se acumular

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="input-filtro-fecha" class="form-label">Desde</label>
-                                <input type="date" value="date" class="form-select input-filtro-fecha"
+                                <input type="date" value="" class="form-select input-filtro-fecha"
                                     id="input-filtro-fecha">
                             </div>
                             <div class="mb-3">
