update/panel de reporte/ resumen por categorias, falta que si la categoria no tiene ni ganancia ni gasto no la pinte

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                         </div>
                         <div class="row justify-content-start text-start my-3">
                             <div class="col-6">Categoria con mayor balance</div>
-                            <div class="col-3 text-end"></div>
-                            <div class="col-3 text-end">m</div>
+                            <div class="col-3 text-end text-center" id="id-categoria-mayor-balance"></div>
+                            <div class="col-3 text-end" id="id-monto-mayor-balance"></div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
                             <div class="col-6">Mes con mayor ganancia</div>
