--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
         <div class="container-fluid nav-container p-3">
-            <a class="navbar-brand nav-title text-white" href="#">
+            <a aria-hidden="true" class="navbar-brand nav-title text-white" href="#">
                 <i class="fa-solid fa-wallet"></i>
                 AhorrADAs</a>
-            <button class="navbar-toggler collapsed navbar-brand" id="navbar-toggler" type="button"
+            <button aria-hidden="true" class="navbar-toggler collapsed navbar-brand" id="navbar-toggler" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse nav-flex" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a id="balance" class="nav-link my-nav-link" aria-current="page" href="#"><i
-                            class="fa-solid fa-chart-line"></i> Balance</a>
-                    <a id="categorias" class="nav-link my-nav-link" href="#"><i class="fa-solid fa-folder-tree"></i>
+                    <a id="balance" class="nav-link my-nav-link" aria-describedby="balance " aria-current="page"
+                        href="#"><i aria-hidden="true" class="fa-solid fa-chart-line"></i> Balance</a>
+                    <a id="categorias" class="nav-link my-nav-link" aria-describedby="categorias" href="#"><i
+                            aria-hidden="true" class="fa-solid fa-folder-tree"></i>
                         Categorías</a>
-                    <a id="reportes" class="nav-link my-nav-link" href="#"><i class="fa-solid fa-chart-pie"></i>
+                    <a id="reportes" class="nav-link my-nav-link" aria-describedby="reportes" href="#"><i
+                            aria-hidden="true" class="fa-solid fa-chart-pie"></i>
                         Reportes</a>
                 </div>
             </div>
@@ -55,7 +57,7 @@
             BALANCE
 ******************************** -->
                 <div class="card col shadow p-3 mb-5 bg-body rounded card-style" style="--bs-bg-opacity: .7;">
-                    <h3 class="card-title">Balance</h3>
+                    <h3 class="card-title" aria-describedby="balance">Balance</h3>
                     <div id="balance-id">
                     </div>
                 </div>
@@ -66,12 +68,13 @@
                     <div class="card row shadow p-3 mb-5 bg-body rounded card-style" style="--bs-bg-opacity: .7;">
                         <div class="container-filtros-ocultar d-flex justify-content-between">
                             <div>
-                                <h3 class="card-title">Filtros</h3>
+                                <h3 class="card-title" aria-describedby="filtros">Filtros</h3>
                             </div>
                             <div>
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item btn-ocultar-filtros" id="btn-ocultar-filtros"><a
-                                            class="text-decoration-none link-secondary" href="#">Ocultar filtros</a>
+                                            class="text-decoration-none link-secondary"
+                                            aria-describedby="ocultar filtros" href="#">Ocultar filtros</a>
                                     </li>
                                 </ol>
                             </div>
@@ -159,22 +162,23 @@
                     <h2 class="mb-5 mt-2">Nueva operación</h2>
                     <div class="mb-3">
                         <label for="descripcion-input" class="form-label">Descripción</label>
-                        <input type="text" class="form-control" id="descripcion-input"
+                        <input type="text" class="form-control" aria-label="descripcion" id="descripcion-input"
                             aria-describedby="descripcion de operacion" required>
                     </div>
                     <div class="mb-3">
                         <label for="monto" class="form-label">Monto</label>
-                        <input type="number" value="0" class="form-control" id="monto-input" required>
+                        <input type="number" value="0" aria-label="monto" class="form-control" id="monto-input"
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="tipo" class="form-label">Tipo</label>
-                        <select class="form-select select-monto" aria-label="Tipo" id="tipo-operacion">
+                        <select class="form-select select-monto" aria-label="tipo" id="tipo-operacion">
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="categoria" class="form-label">Categorías</label>
                         <select class="form-select categorias-select categorias-select-operaciones"
-                            id="categoria-select" aria-label="Categoria">
+                            id="categoria-select" aria-label="categoria">
                         </select>
                     </div>
                     <div class="mb-3">
@@ -183,9 +187,9 @@
                     </div>
                     <div class="d-flex justify-content-end mt-5">
                         <button type="submit" class="btn btn-light mx-2 btn-outline-secondary btn-operaciones"
-                            id="btn-cancelar">Cancelar</button>
+                            id="btn-cancelar" aria-label="cancelar">Cancelar</button>
                         <button type="submit" class="btn btn-outline-secondary btn-operaciones active"
-                            id="agregar-operacion-btn">Agregar</button>
+                            id="agregar-operacion-btn" aria-label="agregar">Agregar</button>
                     </div>
                 </form>
             </div>
@@ -207,18 +211,19 @@
                             aria-describedby="descripcion de operacion" required>
                     </div>
                     <div class="mb-3">
-                        <label for="monto" class="form-label">Monto</label>
+                        <label for="monto" class="form-label" aria-describedby="monto">Monto</label>
                         <input type="number" value="0" class="form-control" id="panel-editar-monto-input" required>
                     </div>
                     <div class="mb-3">
                         <label for="tipo" class="form-label">Tipo</label>
-                        <select class="form-select select-monto" aria-label="Tipo" id="panel-editar-tipo-operacion">
+                        <select class="form-select select-monto" aria-describedby="tipo"
+                            id="panel-editar-tipo-operacion">
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="categoria" class="form-label">Categorías</label>
                         <select class="form-select categorias-select categorias-select-operaciones"
-                            id="panel-editar-categoria-select" aria-label="Categoria">
+                            id="panel-editar-categoria-select" aria-describedby="categoria">
                         </select>
                     </div>
                     <div class="mb-3">
@@ -228,9 +233,11 @@
                     </div>
                     <div class="d-flex justify-content-end mt-5">
                         <button type="submit" class="btn btn-light mx-2 btn-outline-secondary btn-operaciones"
-                            id="panel-editar-btn-cancelar">Cancelar</button>
+                            id="panel-editar-btn-cancelar"
+                            aria-describedby="boton cancela la operacion">Cancelar</button>
                         <button type="submit" class="btn btn-outline-secondary btn-operaciones active"
-                            id="panel-editar-agregar-operacion-btn">Agregar</button>
+                            id="panel-editar-agregar-operacion-btn"
+                            aria-describedby="boton agrega operacion">Agregar</button>
                     </div>
                 </form>
             </div>
@@ -250,7 +257,7 @@
                     <input type="text" class="form-control" id="input-agregar-categoria">
                     <label for="input-agregar-categoria"></label>
                     <button type="submit" class="btn btn-outline-secondary btn-operaciones mx-3 active"
-                        id="btn-agregar-categoria">Agregar</button>
+                        id="btn-agregar-categoria" aria-describedby="buton agregar">Agregar</button>
                 </div>
                 <br>
                 <div id="pintar-categorias"></div>
@@ -267,18 +274,18 @@
                 <div>
                     <h6>Nombre</h6>
                 </div>
-                <div id="panel-para-editar-categoria"></div> 
-                 <div class="d-flex flex-row">
+                <div id="panel-para-editar-categoria"></div>
+                <div class="d-flex flex-row">
                     <input type="text" class="form-control" id="input-agregar-categoria-editada">
-                    <label for="input-agregar-categoria-editada"></label>
+                    <label for="input-agregar-categoria-editada" aria-describedby="agregar categoria"></label>
                     <button type="submit" class="btn btn-outline-secondary btn-operaciones mx-3 active"
-                        id="btn-cancelar-categoria-editar">Cancelar</button>
+                        id="btn-cancelar-categoria-editar" aria-describedby="boton cancelar">Cancelar</button>
                     <button type="submit" class="btn btn-outline-secondary btn-operaciones mx-3 active"
-                        id="btn-agregar-categoria-editar" >Agregar</button>
+                        id="btn-agregar-categoria-editar" aria-describedby="boton agregar">Agregar</button>
                 </div>
             </form>
         </div>
-    </div> 
+    </div>
     <!-- ********************************
             REPORTES
     ******************************** -->
