--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- ID -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"
         integrity="sha512-Bcog7KQsuePA92aZHcQfeAp3w4BiUKHgihhKJLsSVVU67s7KspPbywP7nTMZtJ8YOn//vLCeWvYnb00KryziDA=="
@@ -110,13 +111,13 @@
             <!-- ********************************
             OPERACIONES
 ******************************** -->
-            <div class="my-card-body col m-2" style="width: 10rem;" id="card-operaciones">
+            <div class="my-card-body col m-2 overflow-hidden" style="width: 10rem;" id="card-operaciones">
                 <div class="card card-operaciones shadow p-3 mb-5 bg-body rounded card-style container-operaciones-uno"
                     style="--bs-bg-opacity: .7;">
                     <div class="d-flex justify-content-between">
-                        <h3 class="card-title">Operaciones</h3>
+                        <h3 class="card-title container-operaciones-titulo">Operaciones</h3>
                         <button type="button" id="btn-nueva-operacion"
-                            class="btn btn-outline-secondary btn-operaciones active"><i
+                            class="btn btn-outline-secondary btn-operaciones active container-operaciones-btn"><i
                                 class="fa-solid fa-square-plus"></i>
                             Nueva
                             operación</button>
@@ -135,7 +136,7 @@
                     <div class="box-operaciones-dos d-none" id="con-operaciones">
                         <table class="table table-borderless">
                             <thead>
-                                <tr>
+                                <tr class="tabla-responsive">
                                     <th scope="col">Descripción</th>
                                     <th scope="col">Categoría</th>
                                     <th scope="col">Fecha</th>
@@ -143,7 +144,7 @@
                                     <th scope="col">Acciones</th>
                                 </tr>
                             </thead>
-                            <tbody class="tabla-operaciones" id="tabla-operaciones"></tbody>
+                            <tbody class="tabla-operaciones tabla-responsive" id="tabla-operaciones"></tbody>
                         </table>
                     </div>
                 </div>
@@ -309,29 +310,36 @@
                     <div class="d-flex justify-content-center flex-column mx-4">
                         <h4>Resumen</h4>
                         <div class="row justify-content-start text-start my-4">
-                            <div class="col-6">Categoria con mayor ganancia</div>
-                            <div class="col-3 text-center" id="id-categoria-mayor-ganancia"></div>
-                            <div class="col-3 text-end text-success" id="id-monto-mayor-ganancia"></div>
+                            <div class="col-6 tabla-responsive-reportes">Categoria con mayor ganancia</div>
+                            <div class="col-3 text-center tabla-responsive-reportes" id="id-categoria-mayor-ganancia">
+                            </div>
+                            <div class="col-3 text-end text-success tabla-responsive-reportes"
+                                id="id-monto-mayor-ganancia"></div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
-                            <div class="col-6">Categoria con mayor gasto</div>
-                            <div class="col-3 text-center " id="id-categoria-mayor-gasto"></div>
-                            <div class="col-3 text-end text-danger" id="id-monto-mayor-gasto"></div>
+                            <div class="col-6 tabla-responsive-reportes">Categoria con mayor gasto</div>
+                            <div class="col-3 text-center tabla-responsive-reportes" id="id-categoria-mayor-gasto">
+                            </div>
+                            <div class="col-3 text-end text-danger tabla-responsive-reportes" id="id-monto-mayor-gasto">
+                            </div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
-                            <div class="col-6">Categoria con mayor balance</div>
-                            <div class="col-3 text-end text-center" id="id-categoria-mayor-balance"></div>
-                            <div class="col-3 text-end" id="id-monto-mayor-balance"></div>
+                            <div class="col-6 tabla-responsive-reportes">Categoria con mayor balance</div>
+                            <div class="col-3 text-end text-center tabla-responsive-reportes"
+                                id="id-categoria-mayor-balance"></div>
+                            <div class="col-3 text-end tabla-responsive-reportes" id="id-monto-mayor-balance"></div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
-                            <div class="col-6">Mes con mayor ganancia</div>
-                            <div class="col-3 text-center " id="id-mes-mayor-ganancia"></div>
-                            <div class="col-3 text-end text-success" id="id-mes-manto-ganacia"></div>
+                            <div class="col-6 tabla-responsive-reportes">Mes con mayor ganancia</div>
+                            <div class="col-3 text-center tabla-responsive-reportes" id="id-mes-mayor-ganancia"></div>
+                            <div class="col-3 text-end text-success tabla-responsive-reportes"
+                                id="id-mes-manto-ganacia"></div>
                         </div>
                         <div class="row justify-content-start text-start my-3">
-                            <div class="col-6">Mes con mayor gasto</div>
-                            <div class="col-3 text-center " id="id-mes-mayor-gasto"></div>
-                            <div class="col-3 text-end text-danger" id="id-mes-manto-gasto"></div>
+                            <div class="col-6 tabla-responsive-reportes">Mes con mayor gasto</div>
+                            <div class="col-3 text-center tabla-responsive-reportes" id="id-mes-mayor-gasto"></div>
+                            <div class="col-3 text-end text-danger tabla-responsive-reportes" id="id-mes-manto-gasto">
+                            </div>
                         </div>
                     </div>
                     <br>
@@ -339,14 +347,14 @@
                         <h4>Totales por categorías</h4>
                         <table class="table table-borderless table-success table-striped">
                             <thead>
-                                <tr>
+                                <tr class="tabla-responsive-reportes">
                                     <th scope="col">Categoria</th>
                                     <th scope="col">Ganancias</th>
                                     <th scope="col">Gastos</th>
                                     <th scope="col">Balance</th>
                                 </tr>
                             </thead>
-                            <tbody id="reporte-por-categoria"></tbody>
+                            <tbody class="tabla-responsive-reportes" id="reporte-por-categoria"></tbody>
                         </table>
                     </div>
                     <br>
@@ -354,14 +362,14 @@
                         <h4>Totales por mes</h4>
                         <table class="table table-borderless table-success table-striped">
                             <thead>
-                                <tr>
+                                <tr class="tabla-responsive-reportes">
                                     <th scope="col">Mes</th>
                                     <th scope="col">Ganancias</th>
                                     <th scope="col">Gastos</th>
                                     <th scope="col">Balance</th>
                                 </tr>
                             </thead>
-                            <tbody id="reporte-por-mes"></tbody>
+                            <tbody class="tabla-responsive-reportes" id="reporte-por-mes"></tbody>
                         </table>
                     </div>
                 </div>
