update/solucione problema de vista en el panel editar categoria

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <!-- ********************************
            EDITAR CATEGORIA
 ******************************** -->
-    <div class="container d-none my-5" id="container-categorias-editar">
+    <div class="container oculto my-5" id="container-categorias-editar">
         <div class="row justify-content-center">
             <form class="col-md-8 shadow p-3 mb-5 bg-body rounded" style="--bs-bg-opacity: .7;">
                 <h2 class="mb-3 mt-2">Editar Categoría</h2>
