update/agregue carpetas y las imagenes para el readme, volvi a enlazar imagenes al proyecto

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="box-operaciones-uno" id="sin-operaciones">
                         <div class="d-flex justify-content-center card-operaciones-img">
-                            <img src="./imagenes/operaciones-modo-claro.svg" alt="imagen de operaciones"
+                            <img src="./assets/imagenes/operaciones.svg" alt="imagen de operaciones"
                                 class="imagen-operaciones">
                         </div>
                         <div class="operaciones-textos text-center m-3">
@@ -302,7 +302,7 @@
                 <div id="sin-reportes">
                     <div class="d-flex justify-content-center flex-column">
                         <figure class="d-flex justify-content-center">
-                            <img src="imagenes/sinReportes.svg" style="width:50%" alt="imagen sin reportes">
+                            <img src="./assets/imagenes/sinReportes.svg" style="width:50%" alt="imagen sin reportes">
                         </figure>
                         <div class="operaciones-insuficientes text-center">
                             <h4>Operaciones insuficientes</h4>
